Clean-up warnings and implement style suggestions